apps/aria2/aria2-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aria2
spec:
  serviceName: aria2
  replicas: 1
  selector:
    matchLabels:
      app: aria2
  template:
    metadata:
      labels:
        app: aria2
        tier: downloader
    spec:
      containers:
        - name: aria2
          image: localhost:32000/aria2
          ports:
            - name: aria2-static
              containerPort: 80
            - name: aria2-rpc
              containerPort: 6800
          volumeMounts:
            - name: aria2
              subPath: downloads
              mountPath: /downloads
            - name: aria2
              subPath: data
              mountPath: /data
            - name: aria2
              subPath: watchdir
              mountPath: /watchdir
            - name: aria2-config
              subPath: aria2.conf
              mountPath: /etc/aria2.conf
      volumes:
        - name: aria2
          persistentVolumeClaim:
            claimName: aria2
        - name: aria2-config
          configMap:
            name: aria2-config
