apps/aria2/aria2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aria2
spec:
  type: ClusterIP
  selector:
    app: aria2
  ports:
    - name: aria2-static
      port: 80
      targetPort: 80
    - name: aria2-rpc
      port: 6800
      targetPort: 6800
