apps/aria2/aria2-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aria2-ext
  labels:
    authentified: "true"
    type: external
spec:
  tls:
    - hosts:
        - aria2.{hostname}
      secretName: aria2.ing.cert
  rules:
    - host: aria2.{hostname}
      http:
        paths:
          - backend:
              service:
                name: aria2
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: aria2
                port:
                  number: 6800
            path: /jsonrpc
            pathType: Exact
