apps/aria2/aria2-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aria2-local

  labels:
    type: local
spec:
  rules:
    - host: aria2.local
      http:
        paths:
          - backend:
              service:
                name: aria2
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: aria2
                port:
                  number: 6800
            path: /jsonrpc
            pathType: Exact
